; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/transaction/extr_transaction_management.c_BeginCoordinatedTransaction.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/transaction/extr_transaction_management.c_BeginCoordinatedTransaction.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CurrentCoordinatedTransactionState = common dso_local global i64 0, align 8
@COORD_TRANS_NONE = common dso_local global i64 0, align 8
@COORD_TRANS_IDLE = common dso_local global i64 0, align 8
@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [36 x i8] c"starting transaction in wrong state\00", align 1
@COORD_TRANS_STARTED = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @BeginCoordinatedTransaction to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @BeginCoordinatedTransaction() #0 {
  %1 = load i64, i64* @CurrentCoordinatedTransactionState, align 8
  %2 = load i64, i64* @COORD_TRANS_NONE, align 8
  %3 = icmp ne i64 %1, %2
  br i1 %3, label %4, label %12

4:                                                ; preds = %0
  %5 = load i64, i64* @CurrentCoordinatedTransactionState, align 8
  %6 = load i64, i64* @COORD_TRANS_IDLE, align 8
  %7 = icmp ne i64 %5, %6
  br i1 %7, label %8, label %12

8:                                                ; preds = %4
  %9 = load i32, i32* @ERROR, align 4
  %10 = call i32 @errmsg(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0))
  %11 = call i32 @ereport(i32 %9, i32 %10)
  br label %12

12:                                               ; preds = %8, %4, %0
  %13 = load i64, i64* @COORD_TRANS_STARTED, align 8
  store i64 %13, i64* @CurrentCoordinatedTransactionState, align 8
  %14 = call i32 (...) @AssignDistributedTransactionId()
  ret void
}

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errmsg(i8*) #1

declare dso_local i32 @AssignDistributedTransactionId(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
